form box spacing and grid correction

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,16 @@
+body {
+    margin: 0px;
+    background-color: #f2f2f2;
+}
+
 .main {
     display: flex;
     flex-direction: row;
 }
 
-body {
-    margin: 0px;
-}
-
 .side-hero {
     min-height: 100vh;
-    min-width: 35vw;
+    min-width: 40vw;
     background-image: url("../public/lidya-nada-tXz6g8JYYoI-unsplash.jpg");
     background-size: cover;
     background-position: center;
@@ -26,7 +27,7 @@ body {
     margin-bottom: 0px;
 }
 
-.credit > a {
+a {
     text-decoration: none;
     color: inherit;
 }
@@ -37,14 +38,16 @@ body {
     justify-content: center;
 }
 
-form > section, .log-in, .signup-header {
+form > div, .log-in, .signup-header {
     padding-left: 25px;
 }
 
-.input-fields {
+.form-box {
+    background-color: white;
     box-shadow: 2px 5px 7px -5px grey;
     border-radius: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
+    padding-top: 30px;
 }
 
 .btn {
@@ -86,19 +89,23 @@ form {
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 5px;
     grid-template-rows: repeat(3, 1fr);
-    grid-row-gap: 5px;
+    grid-row-gap: 20px;
+    max-width: 600px;
 }
 
 .input-fields>label {
-    /* border: 1px solid green; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
-    /* padding-left: 10px; */
+}
+
+input {
+    border: 1px solid #f2f2f2;
+    border-radius: 5px;
+    width: 200px;
+    padding: 2px 7px;
 }
 
 .buttons {
     margin-top: 10px;
-    /* padding-left: 10px; */
 }
